samples/_failures_safe/1761612857_28a16b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b1ae1db.c: In function ‘main’:
./samples/SAFE/__tmp_2b1ae1db.c:167:12: error: missing terminating " character
  167 |     printf("\nResult (A * B):
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2b1ae1db.c:167:5: error: expected expression at end of input
  167 |     printf("\nResult (A * B):
      |     ^~~~~~
./samples/SAFE/__tmp_2b1ae1db.c:167:5: error: expected declaration or statement at end of input
